feat : 특정 채팅방의 채팅 내역 및 마지막 채팅 조회 기능 추가
fix : Hibernate 초기화 중 순환 참조로 발생하던 오류 수정
- @JsonManagedReference 및 @JsonBackReference 어노테이션 추가
- 불필요한 양방향 연관 관계 단방향으로 변경