@@ -1,7 +1,9 @@
 package com.one.social_project.domain.chat.service;
 
 import com.one.social_project.domain.chat.dto.ChatRoomDTO;
+import com.one.social_project.domain.chat.entity.ChatMessage;
 import com.one.social_project.domain.chat.entity.ChatRoom;
+import com.one.social_project.domain.chat.repository.ChatMessageRepository;
 import com.one.social_project.domain.chat.repository.ChatRoomRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -9,27 +11,32 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class ChatRoomService {
     private final ChatRoomRepository chatRoomRepository;
+    private final ChatMessageRepository chatMessageRepository;
 
     // 채팅방 생성
     public ChatRoomDTO createChatRoom(ChatRoomDTO chatRoomDTO) {
         String roomId = UUID.randomUUID().toString(); // 랜덤한 채팅방 ID 생성
-        chatRoomDTO.setRoomId(roomId);
 
-        ChatRoom chatRoom = new ChatRoom();
-        chatRoom.setRoomId(roomId);
-        chatRoom.setRoomName(chatRoomDTO.getRoomName());
-        chatRoom = chatRoomRepository.save(chatRoom);
+        ChatRoom chatRoom = ChatRoom.builder()
+                .roomId(roomId)
+                .roomName(chatRoomDTO.getRoomName())
+                .createdAt(LocalDateTime.now())
+                .build();
+
+        chatRoomRepository.save(chatRoom);
+
 
         return ChatRoomDTO.builder()
                 .roomId(chatRoom.getRoomId())
                 .roomName(chatRoomDTO.getRoomName())
-                .createdAt(LocalDateTime.now().toString())
+                .createdAt(LocalDateTime.now())
                 .build();
     }
 
@@ -38,24 +45,31 @@ public class ChatRoomService {
         ChatRoom chatRoom = chatRoomRepository.findByRoomId(roomId)
                 .orElseThrow(() -> new RuntimeException("채팅방을 찾을 수 없습니다.")) ;
 
-        return ChatRoomDTO.builder()
-                .roomId(chatRoom.getRoomId())
-                .roomName(chatRoom.getRoomName())
-                .createdAt(LocalDateTime.now().toString())
-                .build();
+    // 최근 메시지 조회
+    ChatMessage lastMessage = chatMessageRepository.findLatestMessageByRoomId(roomId);
+
+    return ChatRoomDTO.builder()
+            .roomId(chatRoom.getRoomId())
+            .roomName(chatRoom.getRoomName())
+            .createdAt(LocalDateTime.now())
+            .lastMessage(lastMessage != null ? lastMessage.getMessage() : null)
+            .build();
     }
 
     // 전체 채팅방 조회
     public List<ChatRoomDTO> getAllChatRooms() {
         List<ChatRoom> chatRooms = chatRoomRepository.findAll();
-        return chatRooms.stream()
-                .map(chatRoom -> ChatRoomDTO.builder()
-                        .roomId(chatRoom.getRoomId())
-                        .roomName(chatRoom.getRoomName())
-                        .createdAt(LocalDateTime.now().toString())
-                        .build()
-                )
-                .toList();
+
+        return chatRooms.stream().map(chatRoom -> {
+                    ChatMessage lastMessage = chatMessageRepository.findLatestMessageByRoomId(chatRoom.getRoomId());
+
+            return ChatRoomDTO.builder()
+                    .roomId(chatRoom.getRoomId())
+                    .roomName(chatRoom.getRoomName())
+                    .createdAt(chatRoom.getCreatedAt())
+                    .lastMessage(lastMessage != null ? lastMessage.getMessage() : null)
+                    .build();
+        }).collect(Collectors.toList());
     }
 
     // 채팅방 삭제(추후 삭제 -> 나가기 변경)
